@@ -3,6 +3,12 @@ Version 1.7.2
        the revision graph. (Stefan)
 - CHG: Issue #112: Unescaped urls in
        switch dialog. (Stefan)
+- BUG: Issue #115: non-existing folder
+       shown in repo browser. (Stefan)
+- BUG: Issue #110 (again): Bogus entries in
+       Language Combo on x64. (Stefan)
+- BUG: Issue #116: Language Packs don't
+       have the dialog resources translated. (Stefan)
 
 Version 1.7.1
 - BUG: Issue #88: Check for modifications on
